--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -42,6 +42,6 @@
       <br /><br />
       <input type="submit" value="Print!" />
     </form>
-    <script src="xhr2FileUpload.js"></script>
+    <script src="/scripts/xhr2FileUpload.js"></script>
   </body>
 </html>
