--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Remote Printing</title>
   </head>
   <br>
@@ -42,6 +42,6 @@
       <br /><br />
       <input type="submit" value="Print!" />
     </form>
-    <script src="xhr2FileUpload.js"></script>
+    <script src="/xhr2FileUpload.js"></script>
   </body>
 </html>
