--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,46 +2,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./styles.css?v=<%= Date.now() %>" />
     <title>Remote Printing</title>
   </head>
-  <br>
-    <h1>REMOTE PRINTING TEST</h1>
+  <body>
+    <div class="printing-configs-container">
+      <div class="wrapper">
+        <header>REMOTE PRINTING TEST</header>
+        <form action="#" id="uploadForm">
+          <input class="file-input" type="file" name="file" hidden />
+          <i class="fas fa-cloud-upload-alt"></i>
+          <p>Browse Files to Upload</p>
+        </form>
+        <section class="progress-area"></section>
+        <section class="uploaded-area"></section>
+      </div>
 
-    <input type="file" name="file" id="file" />
-
-    <p>
-      <progress />
-    </p>
-    <p>
-      <output></output>
-    </p>
-
-    <br /><br />
-
-    <form action="/print" method="post">
-      <label for="format">Choose format:</label>
-      <select name="format" id="format">
-        <option value="A4">A4</option>
-        <option value="A3">A3</option>
-      </select>
-      <br /><br />
-      <label for="orientation">Choose orientation:</label>
-      <select name="orientation" id="orientation">
-        <option value="3">Portrait</option>
-        <option value="4">Landscape</option>
-      </select>
-      <br /><br />
-      <label for="color">Choose color mode:</label>
-      <select name="color" id="color">
-        <option value="True">Full color</option>
-        <option value="False">Grayscale</option>
-      </select>
-      <br /><br />
-      <input type="text" name="fileName" id="fileName" readonly="" hidden="" />
-      <br /><br />
-      <input type="submit" value="Print!" />
-    </form>
-    <script src="/xhr2FileUpload.js"></script>
+      <div class="printing-configs">
+        <form class="form-inline" action="/print" method="post">
+          <label style="font-weight: bold;" for="format">Format:</label>
+          <select class="form-select" name="format" id="format">
+            <option value="A4">A4</option>
+            <option value="A3">A3</option>
+          </select>
+          <br /><br />
+          <label
+            style="font-weight: bold;"
+            for="orientation"
+          >Orientation:</label>
+          <select class="form-select" name="orientation" id="orientation">
+            <option value="3">Portrait</option>
+            <option value="4">Landscape</option>
+          </select>
+          <br /><br />
+          <label style="font-weight: bold;" for="color">Color mode:</label>
+          <select class="form-select" name="color" id="color">
+            <option value="True">Full color</option>
+            <option value="False">Grayscale</option>
+          </select>
+          <br /><br />
+          <input
+            type="text"
+            name="fileName"
+            id="fileName"
+            readonly=""
+            hidden=""
+          />
+          <br /><br />
+          <input
+            class="btn btn-primary"
+            type="submit"
+            value="Print!"
+            id="print-button"
+          />
+        </form>
+      </div>
+    </div>
+    <script src="./xhr2FileUpload.js?v=<%= Date.now() %"></script>
+    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
   </body>
 </html>
