--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,8 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="./bootstrap.min.css" />
-    <link rel="stylesheet" href="./styles.css>" />
+    <link rel="stylesheet" href="/bootstrap.min.css" />
+    <link rel="stylesheet" href="/styles.css>" />
     <title>Remote Printing</title>
   </head>
   <body>
@@ -69,7 +69,7 @@
         </form>
       </div>
     </div>
-    <script src="./xhr2FileUpload.js"></script>
-    <script src="./bootstrap.bundle.min.js"></script>
+    <script src="/xhr2FileUpload.js"></script>
+    <script src="/bootstrap.bundle.min.js"></script>
   </body>
 </html>
