--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <link rel="stylesheet" href="/bootstrap.min.css" />
-    <link rel="stylesheet" href="/styles.css>" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Remote Printing</title>
   </head>
   <body>
