--- a/public/styles.css
+++ b/public/styles.css
@@ -10,8 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  padding: 20px;
+  margin: 10%;
 }
 
 .wrapper {
@@ -20,6 +19,9 @@ body {
   border-radius: 5px;
   padding: 30px;
   box-shadow: 7px 7px 12px rgba(0, 0, 0, 0.05);
+}
+.wrapper.on-drag-over {
+  border: 2px dotted #0d6efd;
 }
 .wrapper header {
   color: #6990f2;
@@ -119,6 +121,7 @@ section .details span {
 .printing-configs-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  max-width: 900px;
 }
 
 .printing-configs {
@@ -137,5 +140,8 @@ section .details span {
   .printing-configs {
     margin-left: 0;
     margin-top: 10%;
+  }
+  .wrapper {
+    width: 100%;
   }
 }
