refactor public directory and fix upload bug

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,9 +12,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/sweetalert2.css" />
-    <link rel="stylesheet" href="/bootstrap.min.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/assets/sweetalert2.css" />
+    <link rel="stylesheet" href="/assets/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/styles.css" />
     <title>Remote Printing</title>
   </head>
   <body>
@@ -103,11 +103,10 @@
         </form>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/sweetalert2.js"></script>
-    <script src="/xhr2FileUpload.js"></script>
-    <script src="/printdocs.js"></script>
-    <script src="/bootstrap.bundle.min.js"></script>
+    <script src="/assets/axios.min.js"></script>
+    <script src="/assets/sweetalert2.js"></script>
+    <script src="/helpers/xhr2FileUpload.js"></script>
+    <script src="/helpers/printdocs.js"></script>
+    <script src="/assets/bootstrap.bundle.min.js"></script>
   </body>
 </html>
