--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,9 +12,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/sweetalert2.css" />
-    <link rel="stylesheet" href="/assets/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="stylesheet" href="/assets/css/sweetalert2.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>Remote Printing</title>
   </head>
   <body>
@@ -103,10 +103,10 @@
         </form>
       </div>
     </div>
-    <script src="/assets/axios.min.js"></script>
-    <script src="/assets/sweetalert2.js"></script>
+    <script src="/assets/js/axios.min.js"></script>
+    <script src="/assets/js/sweetalert2.js"></script>
     <script src="/helpers/xhr2FileUpload.js"></script>
     <script src="/helpers/printdocs.js"></script>
-    <script src="/assets/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
