--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="/assets/css/sweetalert2.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css?v=1.1" />
     <title>Remote Printing</title>
   </head>
   <body>
@@ -105,8 +105,8 @@
     </div>
     <script src="/assets/js/axios.min.js"></script>
     <script src="/assets/js/sweetalert2.js"></script>
-    <script src="/helpers/xhr2FileUpload.js"></script>
-    <script src="/helpers/printdocs.js"></script>
+    <script src="/helpers/xhr2FileUpload.js?v=1.1"></script>
+    <script src="/helpers/printdocs.js?v=1.1"></script>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
